part1/ex112-113/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-todo
spec:
  selector:
    matchLabels:
      app: kube-todo
  template:
    metadata:
      labels:
        app: kube-todo
    spec:
      volumes:
        - name: shared-image-db
          persistentVolumeClaim:
            claimName: kube-todo-db-pvc
        - name: shared-image-potd
          persistentVolumeClaim:
            claimName: kube-todo-potd-pvc
      containers:
      - name: kube-todo
        image: deeq/kube-todo:latest
        volumeMounts:
          - mountPath: /app/DB
            name: shared-image-db
          - mountPath: /app/backend/potd
            name: shared-image-potd
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
