part1/ex112-113/manifests/kube-todo-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-todo-ingress
  labels:
      name: kube-todo-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: kube-todo-service
          servicePort: 18000
